--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+
+# Created by https://www.toptal.com/developers/gitignore/api/terraform,vscode
+# Edit at https://www.toptal.com/developers/gitignore?templates=terraform,vscode
+
+### Terraform ###
 # Local .terraform directories
 **/.terraform/*
 
@@ -22,8 +27,17 @@ override.tf.json
 *_override.tf.json
 
 # Include override files you do wish to add to version control using negated pattern
-#
 # !example_override.tf
 
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
+
+### vscode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# End of https://www.toptal.com/developers/gitignore/api/terraform,vscode
